welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday=true && vacance=false){
                   ^