welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (weekday=true && vacance=false){
		return false
	} else {
		return true
	}
}
